# HFT-Simulator

./: CMakeLists.txt  ReadMe.md
include/: MarketDataFeedHandler.hpp  MarketDataGenerator.hpp
src/: MarketDataFeedHandler.cpp  MarketDataGenerator.cpp  main.cpp
